syntax = "proto3";

package servicoapp;

// Serviço A - Método Unary
service ServicoA {
    // Método unary que processa uma tarefa simples
    rpc RealizarTarefaA(RequestA) returns (ResponseA) {}
}

// Serviço B - Método Server-streaming
service ServicoB {
    // Método server-streaming que retorna múltiplas respostas
    rpc RealizarTarefaB(RequestB) returns (stream ResponseB) {}
}

// Mensagens para o Serviço A
message RequestA {
    string id = 1;
    string data = 2;
    string operation = 3;
}

message ResponseA {
    string id = 1;
    string result = 2;
    string message = 3;
    int32 status_code = 4;
}

// Mensagens para o Serviço B
message RequestB {
    string id = 1;
    string data = 2;
    int32 count = 3;  // Número de respostas a serem enviadas no stream
}

message ResponseB {
    string id = 1;
    string result = 2;
    string message = 3;
    int32 sequence_number = 4;
    bool is_final = 5;
}


// Serviço C - Método Client-streaming
service ServicoC {
    // Método client-streaming que recebe múltiplas requisições e retorna uma resposta
    rpc RealizarTarefaC(stream RequestC) returns (ResponseC) {}
}

// Serviço D - Método Bidirectional-streaming
service ServicoD {
    // Método bidirectional-streaming que recebe e envia múltiplas mensagens
    rpc RealizarTarefaD(stream RequestD) returns (stream ResponseD) {}
}

// Mensagens para o Serviço C
message RequestC {
    string id = 1;
    string data = 2;
    int32 part = 3;
}

message ResponseC {
    string id = 1;
    string summary = 2;
    int32 total_parts = 3;
    string message = 4;
}

// Mensagens para o Serviço D
message RequestD {
    string id = 1;
    string data = 2;
    int32 sequence = 3;
}

message ResponseD {
    string id = 1;
    string result = 2;
    int32 sequence = 3;
    string message = 4;
}

// ================================
// CHAT SERVICES AND MESSAGES
// ================================

// Serviço de Chat - Módulo A (Processamento de Mensagens)
// Bidirectional streaming para chat em tempo real
service ChatService {
    // Chat em tempo real com streaming bidirecional
    rpc ChatStream(stream ChatMessage) returns (stream ChatMessage) {}
    
    // Obter histórico de mensagens via server streaming
    rpc GetMessageHistory(ChatHistoryRequest) returns (stream ChatMessage) {}
}

// Serviço de Arquivo - Módulo B (Upload e Distribuição de Arquivos)
// Client-streaming para upload e server-streaming para distribuição
service FileService {
    // Upload de arquivo via client-streaming
    rpc UploadFile(stream FileChunk) returns (FileUploadResponse) {}
    
    // Receber arquivos distribuídos via server-streaming
    rpc ReceiveFiles(FileRequest) returns (stream FileChunk) {}
    
    // Streaming bidirecional para distribuição em tempo real
    rpc DistributeFile(stream FileMessage) returns (stream FileMessage) {}
}

// Serviço de Usuários - Módulo A (Gestão de Usuários)
service UserService {
    // Login/registro de usuário
    rpc LoginUser(LoginRequest) returns (LoginResponse) {}
    
    // Obter lista de usuários online
    rpc GetOnlineUsers(OnlineUsersRequest) returns (OnlineUsersResponse) {}
    
    // Atualizar status do usuário
    rpc UpdateUserStatus(UserStatusRequest) returns (UserStatusResponse) {}
}

// Mensagens do Chat
message ChatMessage {
    string message_id = 1;
    string user_id = 2;
    string username = 3;
    string content = 4;
    int64 timestamp = 5;
    MessageType type = 6;
    string room_id = 7;
}

enum MessageType {
    MESSAGE = 0;
    TYPING_START = 1;
    TYPING_STOP = 2;
    USER_JOIN = 3;
    USER_LEAVE = 4;
    FILE_SHARE = 5;
}

message ChatHistoryRequest {
    string room_id = 1;
    int32 limit = 2;
    int64 before_timestamp = 3;
}

// Mensagens de Usuário
message LoginRequest {
    string username = 1;
    string room_id = 2;
}

message LoginResponse {
    string user_id = 1;
    string username = 2;
    bool success = 3;
    string message = 4;
    int64 timestamp = 5;
}

message OnlineUsersRequest {
    string room_id = 1;
}

message OnlineUsersResponse {
    repeated UserInfo users = 1;
    int32 total_count = 2;
}

message UserInfo {
    string user_id = 1;
    string username = 2;
    UserStatus status = 3;
    int64 last_seen = 4;
}

enum UserStatus {
    OFFLINE = 0;
    ONLINE = 1;
    TYPING = 2;
    AWAY = 3;
}

message UserStatusRequest {
    string user_id = 1;
    UserStatus status = 2;
}

message UserStatusResponse {
    bool success = 1;
    string message = 2;
}

// ================================
// FILE SERVICE MESSAGES
// ================================

// Mensagem para upload de arquivo (client-streaming)
message FileChunk {
    string file_id = 1;
    string filename = 2;
    string mime_type = 3;
    bytes chunk_data = 4;
    int32 chunk_index = 5;
    int32 total_chunks = 6;
    int64 file_size = 7;
    string user_id = 8;
    string username = 9;
    string room_id = 10;
}

message FileUploadResponse {
    bool success = 1;
    string file_id = 2;
    string filename = 3;
    int64 file_size = 4;
    string message = 5;
    int64 timestamp = 6;
}

message FileRequest {
    string room_id = 1;
    string file_id = 2;
}

// Mensagem para distribuição de arquivo em tempo real
message FileMessage {
    string file_id = 1;
    string filename = 2;
    string mime_type = 3;
    string user_id = 4;
    string username = 5;
    bytes chunk_data = 6;
    int32 chunk_index = 7;
    int32 total_chunks = 8;
    int64 file_size = 9;
    string room_id = 10;
    FileMessageType type = 11;
    int64 timestamp = 12;
}

enum FileMessageType {
    FILE_START = 0;
    FILE_CHUNK = 1;
    FILE_END = 2;
    FILE_ERROR = 3;
}