/**
 * M√≥dulo B - Servidor gRPC em Node.js
 * Implementa o ServicoB com m√©todo server-streaming RealizarTarefaB
 */

const grpc = require("@grpc/grpc-js");
const protoLoader = require("@grpc/proto-loader");
const path = require("path");

// Configura√ß√£o para carregar o arquivo .proto
const PROTO_PATH = path.join(__dirname, "protos", "servico.proto");

const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
});

// Carrega o package gRPC
const servicoProto = grpc.loadPackageDefinition(packageDefinition).servicoapp;

/**
 * Implementa√ß√£o do servi√ßo B
 * M√©todo server-streaming que retorna m√∫ltiplas respostas ao longo do tempo
 */
class ServicoBImpl {
  /**
   * Implementa o m√©todo RealizarTarefaB (server-streaming)
   * @param {Object} call - Objeto da chamada gRPC contendo a requisi√ß√£o e o stream
   */
  realizarTarefaB(call) {
    const request = call.request;

    console.log(`üì® [ServicoB] Recebida requisi√ß√£o para streaming:`);
    console.log(`   ID: ${request.id}`);
    console.log(`   Data: ${request.data}`);
    console.log(`   Count: ${request.count}`);

    try {
      // Valida o n√∫mero de respostas solicitadas
      const responseCount = Math.min(Math.max(request.count || 3, 1), 10); // Entre 1 e 10

      console.log(
        `üîÑ [ServicoB] Iniciando stream com ${responseCount} respostas`,
      );

      // Processa e envia respostas em intervalos
      this.enviarRespostasStream(call, request, responseCount);
    } catch (error) {
      console.error(`‚ùå [ServicoB] Erro no processamento:`, error);
      call.emit("error", {
        code: grpc.status.INTERNAL,
        details: `Erro no processamento: ${error.message}`,
      });
    }
  }

  /**
   * Envia respostas atrav√©s do stream com intervalos de tempo
   * @param {Object} call - Objeto da chamada gRPC
   * @param {Object} request - Requisi√ß√£o original
   * @param {number} count - N√∫mero de respostas a enviar
   */
  async enviarRespostasStream(call, request, count) {
    for (let i = 1; i <= count; i++) {
      // Simula processamento com delay
      await this.delay(1000); // 1 segundo entre respostas

      // Verifica se o cliente ainda est√° conectado
      if (call.cancelled) {
        console.log(
          `üö´ [ServicoB] Stream cancelado pelo cliente para ID: ${request.id}`,
        );
        return;
      }

      // Processa dados para esta itera√ß√£o
      const processedData = this.processarDadosStream(request.data, i, count);

      // Prepara a resposta
      const response = {
        id: request.id,
        result: processedData,
        message: `Resposta ${i} de ${count} do ServicoB`,
        sequence_number: i,
        is_final: i === count,
      };

      console.log(
        `üì§ [ServicoB] Enviando resposta ${i}/${count} para ID: ${request.id}`,
      );

      // Envia a resposta atrav√©s do stream
      call.write(response);

      // Se for a √∫ltima resposta, finaliza o stream
      if (i === count) {
        console.log(`‚úÖ [ServicoB] Stream finalizado para ID: ${request.id}`);
        call.end();
      }
    }
  }

  /**
   * Processa dados para cada resposta do stream
   * @param {string} data - Dados originais
   * @param {number} sequencia - N√∫mero da sequ√™ncia atual
   * @param {number} total - Total de respostas
   * @returns {string} - Dados processados
   */
  processarDadosStream(data, sequencia, total) {
    const timestamp = new Date().toISOString();
    const progresso = ((sequencia / total) * 100).toFixed(1);

    // Diferentes tipos de processamento baseados na sequ√™ncia
    const processamentos = [
      () => `${data}_chunk_${sequencia}_analyzed`,
      () => `${data}_chunk_${sequencia}_transformed`,
      () => `${data}_chunk_${sequencia}_enriched`,
      () => `${data}_chunk_${sequencia}_validated`,
      () => `${data}_chunk_${sequencia}_finalized`,
    ];

    const processador = processamentos[(sequencia - 1) % processamentos.length];
    const resultado = processador();

    return `${resultado}_progress_${progresso}%_at_${timestamp}`;
  }

  /**
   * Fun√ß√£o utilit√°ria para criar delays
   * @param {number} ms - Milissegundos para aguardar
   * @returns {Promise} - Promise que resolve ap√≥s o delay
   */
  delay(ms) {
    return new Promise((resolve) => setTimeout(resolve, ms));
  }
}

/**
 * Fun√ß√£o para iniciar o servidor gRPC
 */
function startServer() {
  const server = new grpc.Server();

  // Adiciona o servi√ßo ao servidor
  server.addService(servicoProto.ServicoB.service, new ServicoBImpl());

  // Configura√ß√£o do endere√ßo e porta
  const serverAddress = "0.0.0.0:50052";

  // Bind do servidor na porta
  server.bindAsync(
    serverAddress,
    grpc.ServerCredentials.createInsecure(),
    (error, port) => {
      if (error) {
        console.error("‚ùå Erro ao iniciar servidor:", error);
        return;
      }

      console.log("üöÄ M√≥dulo B - Servidor gRPC iniciado!");
      console.log(`üìç Servidor rodando em: ${serverAddress}`);
      console.log(`üîß Porta atribu√≠da: ${port}`);
      console.log("üéØ Servi√ßos dispon√≠veis:");
      console.log("   - ServicoB.RealizarTarefaB (m√©todo server-streaming)");
      console.log("");
      console.log("‚ö° Aguardando requisi√ß√µes de streaming...");

      // Inicia o servidor
      server.start();
    },
  );

  // Graceful shutdown
  process.on("SIGINT", () => {
    console.log("\nüîÑ Recebido sinal SIGINT, encerrando servidor...");
    server.tryShutdown(() => {
      console.log("‚úÖ Servidor encerrado graciosamente");
      process.exit(0);
    });
  });

  process.on("SIGTERM", () => {
    console.log("\nüîÑ Recebido sinal SIGTERM, encerrando servidor...");
    server.tryShutdown(() => {
      console.log("‚úÖ Servidor encerrado graciosamente");
      process.exit(0);
    });
  });
}

// Inicia o servidor se este arquivo for executado diretamente
if (require.main === module) {
  console.log("üîß Inicializando M√≥dulo B...");
  startServer();
}

module.exports = { ServicoBImpl, startServer };
